--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,10 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1"
   }
 }
