--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "sql": "nodemon DBSetup.js",
+    "sql": "node DBSetup.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
